# hackathon_IBM_DIA

./: .env.exemple  .gitignore  README.md  docker-compose.yaml  hello.txt  litellm.config.yaml  main.py  pyproject.toml  test.py
source/: config.py
