[project]
name = "hackathon-ibm-dia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "ibm-watsonx-ai>=1.4.4",
    "pandas<2.3",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "streamlit>=1.51.0",
]
